--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,54 @@
+/* variables */
+:root{
+    --black: #000000;
+    --white:#FFFFFF;
+    --dark:#333333;
+    --light-blue:#81B3D2;
+    --blue:#669EC0;
+    --dark-blue:#5496BD;
+    --light-brown:#766357;
+    --brown:#604E43;
+    --dark-brown:#503E33;
+    --grey:#A9A9A9;
+    --special-beige:#F2F2F2;
+    --back-beige:#EEEEEE;
+    
+}
+
+body {
+    min-width: 1200px;
+    margin: 0;
+    padding: 0;
+    font-family: "PT Sans", Arial, sans-serif;
+    font-size: 14px;
+    line-height: 21px;
+    font-weight: 400;
+    color: var(--black);
+    text-transform: uppercase;
+    background-color: var(--white);
+  }
+
+  a {
+    text-decoration: none;
+  }
+  
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  /* Main navigation */
+
+.main-navigation {
+    font-size: 14px;
+    line-height: 26px;
+    font-weight: 700;
+    color: var(--black);
+    background-color: transparent;
+  }
+
 .welcome{
-    height:509px;
-    width:1200px;
-    background: url(../img/background_photo.jpg) 100% 100% no-repeat;
-   background-size: cover;
+   text-align: center;
 }
 
 .cites{
@@ -11,10 +57,3 @@
     background-color: #81B3D2;
     /* text-align: center; */
 }
-
-/* .filter{
-    width: 1200px;
-    height: 217px;
-    background: url(../img/background-diffuse.jpg) 100% 100% no-repeat ;
-   background-size: cover;
-} */
