--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,18 @@
   --grey: #a9a9a9;
   --special-beige: #f2f2f2;
   --back-beige: #eeeeee;
+  --light-grey: #cacaca;
+  --back-grey: #888888;
+  --rating-color: #666666;
+}
+
+.page {
+  background-color: var(--special-beige);
 }
 
 body {
-  min-width: 1200px;
-  margin: 0;
+  width: 1200px;
+  margin: auto;
   padding: 0;
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 14px;
@@ -25,15 +32,22 @@ body {
   color: var(--black);
   text-transform: uppercase;
   background-color: var(--white);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
-.site-navigation a, .main-footer a, .appointment a {
+.site-navigation a,
+.main-footer a,
+.appointment a {
   text-decoration: none;
 }
 
 .page img {
   max-width: 100%;
   height: auto;
+}
+
+button {
+  cursor: pointer;
 }
 
 /* Main navigation */
@@ -47,19 +61,31 @@ body {
   text-align: center;
 }
 
-.site-navigation, .features-list{
+.site-navigation {
+  display: inline-flex;
+  padding: 0;
+  margin: 0;
+}
+
+.site-navigation li {
+  margin: 20px 65px 0px;
+}
+
+.site-navigation,
+.features-list,
+.main-footer ul {
   list-style: none;
 }
 
-.site-navigation a{
+.site-navigation a {
   color: var(--black);
 }
 
-.site-navigation a:hover{
-  color:var(--light-blue);
+.site-navigation a:hover {
+  color: var(--light-blue);
 }
 
-.site-navigation a:focus{
+.site-navigation a:focus {
   color: var(--light-brown);
 }
 
@@ -67,84 +93,106 @@ body {
   text-align: center;
 }
 
-/* Info */
-
-.info{
-  text-align: center;
+.main-header-logo {
+  margin: 0 65px;
 }
 
-.info-title{
+/* Info */
+
+.info {
+  text-align: center;
+  height: 215px;
+}
+
+.info-title {
   font-weight: 700;
   font-size: 21px;
   line-height: 26px;
+  padding-top: 42px;
+  margin: 0;
 }
 
-.info-reasons{
+.info-reasons {
   font-weight: 400;
   font-size: 14px;
   line-height: 26px;
+  margin: 0;
+  padding-top: 50px;
 }
 
 /* Features */
 
-.feature-item{
+.flex {
+  display: flex;
+}
+
+.features-list {
+  padding: 0;
+}
+
+.feature-item {
   text-align: center;
 }
 
-.feature-item h3{
+.feature-item h3 {
   font-weight: 700;
   font-size: 21px;
   line-height: 21px;
+  padding-top: 30px;
 }
 
-.feature-item:nth-child(1), .feature-item:nth-child(7){
+.feature-item-blue {
   width: 400px;
   height: 256px;
   background-color: var(--light-blue);
 }
 
-.feature-item:nth-child(1) h3, .feature-item:nth-child(7) h3{
-  color:var(--white);
+.feature-item-blue h3,
+.feature-item-blue p {
+  color: var(--white);
 }
 
-.feature-item:nth-child(1) p, .feature-item:nth-child(7) p{
-  color:var(--white); 
-}
-
-.feature-item:nth-child(3), .feature-item:nth-child(4), .feature-item:nth-child(5){
-  width:400px;
+.feature-item-white {
+  width: 400px;
   height: 330px;
 }
 
-.feature-item:nth-child(8), .feature-item:nth-child(9), .feature-item:nth-child(10){
-  width:400px;
-  height: 259px;
-  background-color: var(--back-beige);
+.feature-item-white img {
+  padding-top: 60px;
 }
 
-.feature-item:nth-child(8), .feature-item:nth-child(9), .feature-item:nth-child(10){
-  color:var(--dark);
+.feature-item-white h3 {
+  padding: 0;
+}
+
+.feature-item-grey {
+  width: 400px;
+  height: 259px;
+  background-color: var(--back-beige);
+  color: var(--dark);
 }
 
 /* Appointment */
 
-.appointment{
-  text-align:center;
+.appointment {
+  text-align: center;
+  margin-top: 58px;
 }
 
-.appointment h3{
+.appointment h3 {
   font-weight: 700;
   font-size: 30px;
   line-height: 24px;
 }
 
-.appointment-info{
+.appointment-info {
   font-size: 14px;
   line-height: 24px;
-  color:var(--dark);
+  color: var(--dark);
+  margin: 36px 0 50px;
 }
 
-.appointment-button{
+.appointment-button {
   text-align: center;
   background-color: var(--light-brown);
   color: var(--white);
@@ -153,95 +201,349 @@ body {
   font-weight: 700;
   font-size: 21px;
   line-height: 26px;
-  border:none;
+  border: none;
 }
 
-.appointment-button:hover{
+.appointment-button:hover {
   background-color: var(--brown);
 }
 
-.appointment-button:focus{
+.appointment-button:focus {
   background-color: var(--dark-brown);
-  color: rgba(255,255,255, 0.3);
+  color: rgba(255, 255, 255, 0.3);
 }
 
 /* Footer */
 
-.main-footer{
+.main-footer {
   width: 1200px;
   height: 120px;
-  background-color: rga(255,255,255,0.9);
+  background-color: rga(255, 255, 255, 0.9);
+  display: flex;
+  justify-content: space-around;
 }
 
-.footer-contacts{
-  color:inherit;
+.footer-contacts {
+  color: inherit;
   font-weight: 700;
   font-size: 21px;
   line-height: 26px;
 }
 
-.footer-phone{
-  color:inherit;
+.footer-phone {
+  color: inherit;
 }
 
-.footer-social ul{
+.footer-social ul {
   list-style: none;
   text-align: center;
+  display: flex;
+  padding: 20px;
 }
 
-.social-button{
+.social-button {
   width: 46px;
   height: 48px;
-  text-align:center;
+  text-align: center;
   background-color: var(--light-blue);
+  margin: 0 5px;
 }
 
-.social-button:hover{
+.twitter {
+  padding: 15px;
+}
+
+.facebook {
+  padding: 8px;
+}
+
+.youtube {
+  padding: 17px 15px;
+}
+
+.social-button:hover {
   background-color: var(--blue);
 }
 
-
-.footer-copyright{
+.footer-copyright {
   text-align: end;
   line-height: 26px;
+  padding: 40px 0;
+}
+
+.logo_html:hover {
+  fill: var(--light-blue);
 }
 
 /* Modal */
 
-.search-form{
+.modal{
   width: 568px;
   height: 395px;
+  position: absolute;
+  background-color: var(--white);
+  margin-left: 315px;
+  box-shadow: 0 0 10px rgb(0 0 0 / 30%);
 }
 
-.appointment-item{
+.search-form {
+  width: 458px;
+  height: 285px;
+  margin: 55px auto;
+}
+
+.appointment-item {
   font-weight: 700;
   font-size: 14px;
   line-height: 26px;
   color: var(--black);
 }
 
-.appointment-item input{
+.people{
   background-color: var(--special-beige);
-}
-
-input[type="date"]{
-  width: 346px;
-  height: 38px;
-}
-
-input[type="number"]{
+  border:none;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 26px;
+  color: var(--black);
   width: 114px;
   height: 38px;
   text-align: center;
 }
 
-.modal-button{
+.modal-button {
   background-color: var(--light-blue);
-  color:var(--white);
+  color: var(--white);
   border: none;
   width: 458px;
-  height: 58px; 
+  height: 58px;
   font-weight: 700;
   font-size: 21px;
   line-height: 26px;
+}
+
+.modal-button:hover {
+  background-color: var(--blue);
+}
+
+.date {
+  background: url(../img/icon/calendar-icon.svg) no-repeat 315px;
+  width: 346px;
+  height: 38px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 26px;
+  color: var(--black);
+  background-color: var(--special-beige);
+  border:none;
+}
+
+.date-in{
+  margin: 0 0 29px 15px;
+}
+
+.date-out{
+  margin: 0 0 29px 12px;
+}
+
+.adult-amount{
+  margin: 0 53px 54px 32px;
+}
+
+.children-amount{
+  margin: 0 0 54px 15px;
+}
+
+/* Filter */
+
+.filter {
+  background: url(../img/background-diffuse.jpg) no-repeat;
+  background-color: var(--grey);
+  width: 1200px;
+  height: 217px;
+  margin: auto;
+  color: var(--white);
+  display: flex;
+}
+
+.active {
+  color: var(--light-brown);
+}
+
+.filter legend {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 21px;
+}
+
+.inner-page ul {
+  list-style: none;
+  padding: 0;
+}
+
+.filter input {
+  background-color: transparent;
+  color: var(--white);
+}
+
+.filter input[type="number"] {
+  border: 2px solid var(--white);
+  border-radius: 2px;
+}
+
+.filter button {
+  background-color: transparent;
+  width: 137px;
+  height: 36px;
+  border: 2px solid var(--white);
+  border-radius: 2px;
+  color: var(--white);
+}
+
+.filter button:hover {
+  background-color: var(--white);
+  color: var(--black);
+}
+
+.filter fieldset {
+  border: none;
+  margin: 27px 0 0 72px;
+}
+
+input[type="range"] {
+  width: 100%;
+}
+
+.filter .amount-for-day {
+  text-align: center;
+  margin-left: 347px;
+}
+
+.filter li {
+  margin-bottom: 24px;
+}
+
+/* Sort */
+
+.dir-button {
+  background-color: transparent;
+  border: none;
+}
+
+.icon-up-dir:hover {
+  fill: var(--black);
+}
+
+.icon-down-dir:hover {
+  fill: var(--black);
+}
+
+.sort p {
+  padding: 0;
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 26px;
+}
+
+.sort {
+  display: flex;
+  margin: 30px 73px;
+}
+
+.sort-type {
+  padding: 23px 41px;
+  border: none;
+  width: 850px;
+}
+
+.sort-type a {
+  margin-left: 40px;
+  color: rgba(0, 0, 0, 0.3);
+  border-bottom: 1px dotted var(--light-blue);
+  text-decoration: none;
+}
+
+.sort-type a:hover {
+  color: var(--light-blue);
+}
+
+.sort-type a:focus {
+  color: var(--light-blue);
+  border: none;
+}
+
+hr {
+  height: 1px;
+  border: 0;
+  background-color: #e5e5e5;
+}
+
+.dir-button-up {
+  margin-left: 375px;
+}
+
+/* hotels */
+
+.hotels li {
+  display: flex;
+  margin: 30px 73px;
+}
+
+.hotel-info {
+  width: 260px;
+  padding-left: 29px;
+}
+
+.hotel-name {
+  margin: 0 0 17px;
+}
+
+.more-info-button {
+  width: 110px;
+  height: 27px;
+  background-color: var(--light-blue);
+  color: var(--white);
+  border: none;
+  margin-top: 20px;
+}
+
+.more-info-button:hover {
+  background-color: var(--blue);
+}
+
+.order-button {
+  width: 142px;
+  height: 27px;
+  background-color: var(--light-brown);
+  color: var(--white);
+  border: none;
+}
+
+.order-button:hover {
+  background-color: var(--brown);
+}
+
+.hotel {
+  margin-right: 40px;
+}
+
+.motel {
+  margin-right: 64px;
+}
+
+.aparts {
+  margin-right: 23px;
+}
+
+.hotel-rating {
+  padding-left: 520px;
+}
+
+.hotel-rating p {
+  width: 110px;
+  height: 27px;
+  margin-top: 47px;
+  background-color: var(--special-beige);
+  color: var(--rating-color);
+  text-align: center;
 }
